# django-htmx

./: .gitignore  docker-compose.yml
django_backend/: .dockerignore  .env_example  .gitignore  Dockerfile  entrypoint.sh  fly.toml  gunicorn.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
django_backend/src/: settings.py  urls.py  wsgi.py
django_backend/src/accounts/: forms.py  urls.py  views.py
django_backend/src/accounts/migrations/: 0001_initial.py
django_backend/src/core/: decorators.py
django_backend/src/core/management/commands/: initadmin.py
django_backend/src/core/templatetags/: core_filters.py  form_tags.py
django_backend/src/demo/: admin.py  models.py  urls.py  views.py
django_backend/src/demo/management/commands/: fakedata.py
django_backend/src/demo/migrations/: 0001_initial.py  0002_person_phone.py  0003_alter_person_options.py
django_backend/src/marketing/: urls.py  views.py
django_backend/src/static/css/: components.css  index.css
django_backend/src/static/js/: index.js
django_backend/src/templates/: app.html  base.html
django_backend/src/templates/account/: login.html  signup.html
django_backend/src/templates/fragments/: app_nav.html  footer.html  footer_includes.html  header_includes.html  modals.html  navbar.html  non_field_errors.html  spinner.html  table-pagination.html
django_backend/src/templates/registration/: logged_out.html  login.html  logout.html  password_reset_complete.html  password_reset_confirm.html  password_reset_form.html  register.html  signup.html
(+17 files in other folders)
